@@ -14,6 +14,7 @@ sunuo (0.3.2) unstable; urgency=low
     - use Config.ConfigDirectory, Config.BackupDirectory
     - don't read data-path from stdin
     - removed DataPath.CustomPath
+    - don't try to dns-resolve hostname, just use LocalEndPoint
 
  --
 
